--- a/01 JavaScript 基础 - 基本语法/8.常量const.html
+++ b/01 JavaScript 基础 - 基本语法/8.常量const.html
@@ -11,6 +11,10 @@
     const PI = 3.1415
     console.log(PI)
 
+    // 对于const声明的引用类型的变量，存的是地址，而不是具体值
+
+    // 建议【数组】和【对象】使用【const】声明
+
   </script>
 
 </body>
